# colored-diff

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: poem.rs  pretty_assertions.rs
src/: lib.rs
