[package]
name = "colored-diff"
version = "0.2.3"

license = "MIT OR Unlicense"
readme = "README.md"
description = "Format the difference between two strings with ANSI colors"
repository = "https://github.com/CAD97/colored-diff"
keywords = ["pretty-assertions", "diff", "difference"]
categories = ["development-tools::testing"]

exclude = ["/.github/**/*"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
dissimilar = "1.0"
ansi_term = "0.12"
itertools = { version = "0.10", default-features = false }

[dev-dependencies]
regex = "1.5"
